--- a/src/components/molecules/GroupCard.css
+++ b/src/components/molecules/GroupCard.css
@@ -1,6 +1,5 @@
 .group-card.xcard {
   border-radius: var(--xclues-border-radius);
-  min-height: 64px;
   border: none;
   overflow: hidden;
 }
@@ -62,6 +61,7 @@
   align-items: center;
   justify-content: center;
   height: 100%;
+  overflow: hidden;
 }
 
 .group-card .group-card-items {
